@@ -184,7 +184,8 @@ static void wrap_finalize (void* pointer, object parents,
  DB_ENV->errx	Error message
 */
 
-DEFCHECKER(dbe_encryption_check, prefix=DB_ENCRYPT, AES)
+DEFCHECKER(dbe_encryption_check, prefix=DB_ENCRYPT, default=DB_ENCRYPT_AES, \
+           AES)
 /* set the password to perform encryption and decryption.
  can trigger GC */
 static void dbe_set_encryption (DB_ENV *dbe, gcv_object_t *o_flags_,
@@ -436,8 +437,8 @@ static void set_flags (object arg, u_int32_t *flag_on, u_int32_t *flag_off,
 static void set_verbose (DB_ENV *dbe, object arg, u_int32_t flag) {
   if (boundp(arg)) SYSCALL(dbe->set_verbose,(dbe,flag,!nullp(arg)));
 }
-DEFCHECKER(check_lk_detect,prefix=DB_LOCK, DEFAULT EXPIRE MAXLOCKS      \
-           MINLOCKS MINWRITE OLDEST RANDOM YOUNGEST)
+DEFCHECKER(check_lk_detect,prefix=DB_LOCK, default=DB_LOCK_DEFAULT, \
+           DEFAULT EXPIRE MAXLOCKS MINLOCKS MINWRITE OLDEST RANDOM YOUNGEST)
 DEFUN(BDB:DBE-SET-OPTIONS, dbe &key                                     \
       :ERRFILE :ERRPFX :PASSWORD :ENCRYPT :LOCK_TIMEOUT :TXN_TIMEOUT :TIMEOUT \
       :SHM_KEY :TAS_SPINS :TX_TIMESTAMP :TX_MAX :DATA_DIR :TMP_DIR      \
@@ -1091,7 +1092,8 @@ DEFUN(BDB:DB-FD, db)
   VALUES1(fixnum(fd));
 }
 
-DEFCHECKER(db_get_action,prefix=DB,CONSUME CONSUME-WAIT GET-BOTH SET-RECNO)
+DEFCHECKER(db_get_action,prefix=DB, default=DB_CONSUME, \
+           CONSUME CONSUME-WAIT GET-BOTH SET-RECNO)
 DEFFLAGSET(db_get_options, DB_AUTO_COMMIT DB_DIRTY_READ DB_MULTIPLE DB_RMW)
 DEFUN(BDB:DB-GET, db key &key :ACTION :AUTO_COMMIT :DIRTY_READ :MULTIPLE :RMW \
       :TRANSACTION :ERROR :TYPE)
@@ -1300,7 +1302,8 @@ DEFUN(BDB:DB-REMOVE, db file database)
   VALUES0; skipSTACK(3);
 }
 
-DEFCHECKER(db_put_action,prefix=DB, APPEND NODUPDATA NOOVERWRITE)
+DEFCHECKER(db_put_action,prefix=DB, default=DB_APPEND, \
+           APPEND NODUPDATA NOOVERWRITE)
 DEFFLAGSET(db_put_flags, DB_AUTO_COMMIT)
 DEFUN(BDB:DB-PUT, db key val &key :AUTO_COMMIT :ACTION :TRANSACTION)
 { /* Store items into a database */
@@ -1786,9 +1789,9 @@ static dbt_o_t fill_or_init (object datum, DBT *pdbt, u_int32_t re_len) {
     return check_dbt_type(datum);
   } else return fill_dbt(datum,pdbt,re_len); /* datum */
 }
-DEFCHECKER(dbc_get_action,prefix=DB,CURRENT FIRST GET-BOTH GET-BOTH-RANGE \
-           GET-RECNO JOIN-ITEM LAST NEXT NEXT-DUP NEXT-NODUP         \
-           PREV PREV-NODUP SET SET-RANGE SET-RECNO)
+DEFCHECKER(dbc_get_action,prefix=DB,default=DB_CURRENT, \
+           CURRENT FIRST GET-BOTH GET-BOTH-RANGE GET-RECNO JOIN-ITEM LAST \
+           NEXT NEXT-DUP NEXT-NODUP PREV PREV-NODUP SET SET-RANGE SET-RECNO)
 DEFFLAGSET(dbc_get_options, DB_DIRTY_READ DB_MULTIPLE DB_MULTIPLE_KEY DB_RMW)
 DEFUN(BDB:DBC-GET, cursor key data action &key :DIRTY_READ :MULTIPLE \
       :MULTIPLE_KEY :RMW :ERROR)
@@ -1821,7 +1824,7 @@ DEFUN(BDB:DBC-GET, cursor key data action &key :DIRTY_READ :MULTIPLE \
   mv_count = 2;
 }
 
-DEFCHECKER(dbc_put_flag,prefix=DB,                              \
+DEFCHECKER(dbc_put_flag,prefix=DB, default=DB_CURRENT, \
            CURRENT AFTER BEFORE KEYFIRST KEYLAST NODUPDATA)
 DEFUN(BDB:DBC-PUT, cursor key data flag)
 { /* retrieve key/data pairs from the database */
@@ -2076,7 +2079,8 @@ DEFUN(BDB:LOGC-CLOSE, logc)
   } else { skipSTACK(1); VALUES1(NIL); }
 }
 
-DEFCHECKER(logc_get_action,prefix=DB,CURRENT FIRST LAST NEXT PREV)
+DEFCHECKER(logc_get_action,prefix=DB,default=DB_CURRENT, \
+           CURRENT FIRST LAST NEXT PREV)
 DEFUN(BDB:LOGC-GET, logc action &key :TYPE :ERROR)
 { /* return records from the log. */
   int no_error = nullp(popSTACK());
@@ -2150,7 +2154,7 @@ DEFUN(BDB:TXN-ABORT, txn)
   } else { skipSTACK(1); VALUES1(NIL); }
 }
 
-DEFCHECKER(txn_check_sync,prefix=DB_TXN,NOSYNC SYNC)
+DEFCHECKER(txn_check_sync,prefix=DB_TXN,default=DB_TXN_NOSYNC, NOSYNC SYNC)
 DEFUN(BDB:TXN-COMMIT, txn &key :SYNC)
 { /* Commit a transaction */
   u_int32_t flags = txn_check_sync(popSTACK());
